feat: article development -3

--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Sadık Cihan Ayaz</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
 
 	<div class="container">
 		<div class="hero">
 			<h1 class="name"><strong>Sadık Cihan</strong> Ayaz</h1>
-			<span class="job-title">React Native Developer</span>
+			<span class="job-title"><a href="https://sadikcihanayaz.github.io/md.htm"> Read Articles</a></span>
 			<span class="email">scayaz.19.19@gmail.com</span>
-
-			<h2 class="lead">React Native Developer</h2>
+			<span class="name"><p><a href="https://www.linkedin.com/in/sadikcihanayaz/"> Linkedin</a></p></span>
+			<span class="name"><p><a href="https://github.com/SadikCihanAyaz">Github</a></p></span>
 		</div>
 	</div>
 
-<!-- Skills and intrest section -->
+	<!-- Skills and intrest section -->
 	<div class="container">
 
 		<div class="sections">
@@ -30,14 +32,14 @@
 					<span>.Net, Java</span>
 				</div>
 			</div>
-			
+
 			<div class="list-card">
 				<span class="exp">+ 4 years</span>
 				<div>
 					<h3>Mobile Application</h3>
 					<span>React Native, Javascript, Typescript, Android, Swift</span>
 				</div>
-			</div>	
+			</div>
 
 		</div>
 
@@ -46,7 +48,7 @@
 	<!-- Achievements -->
 
 	<div class="container cards">
-		
+
 		<div class="card">
 			<div class="skill-level">
 				<span>+</span>
@@ -59,7 +61,7 @@
 			</div>
 		</div>
 
-			
+
 		<div class="card">
 			<div class="skill-level">
 				<h2>50</h2>
@@ -72,7 +74,7 @@
 			</div>
 		</div>
 
-			
+
 		<div class="card">
 			<div class="skill-level">
 				<h2>30</h2>
@@ -91,38 +93,46 @@
 
 	<div class="container">
 		<ol class="timeline">
-		  <li>
-		    <p class="line">Experiences</p>
-		    <span class="point"></span>
-		    <p class="description">
-		      Albarakatech
-		    </p>
-		    <span class="date">Today - Sep. 2017</span>
-		  </li>
+			<li>
+				<p class="line">Current</p>
+				<span class="point"></span>
+				<p class="description">
+					Innovance
+				</p>
+				<span class="date">Feb. 2022 - Today</span>
+			</li>
 
-		  <li>
-		    <span class="point"></span>
-		    <p class="description">
-		      A Bank
-		    </p>
-		    <span class="date">Apr. 2015 - Sep. 2017</span>
-		  </li>
-		  <li>
-		    <span class="point"></span>
-		    <p class="description">
-		      A Bank
-		    </p>
-		    <span class="date">Dec. 2013 - Apr. 2015</span>
-		  </li>
+			<li>
+				<p class="line">Past Experience</p>
+				<span class="point"></span>
+				<p class="description">
+					Albarakatech (Sep. 2017 - Feb. 2022 )
+				</p>
+				<p class="description">
+					A Bank (Dec. 2013 - Sep. 2017)
+				</p>
+				<p class="description">
+					Turkgen (July 2013 - Dec. 2013)
+				</p>
+				<span class="date">Dec. 2013 - Feb. 2022</span>
+			</li>
 
-		  		  <li>
-		    <p class="line">Education</p>
-		    <span class="point"></span>
-		    <p class="description">
-		      Istanbul University - Computer Engineering 
-		    </p>
-		    <span class="date">2011 - 2016</span>
-		  </li>
+			<li>
+				<p class="line">Education</p>
+				<span class="point"></span>
+				<p class="description">
+					Istanbul University - Computer Engineering
+				</p>
+				<span class="date">2011 - 2016</span>
+			</li>
+			<li>
+				<p class="line">Education</p>
+				<span class="point"></span>
+				<p class="description">
+					Corum Anatolian High School
+				</p>
+				<span class="date">2006 - 2010</span>
+			</li>
 
 		</ol>
 
@@ -130,7 +140,21 @@
 
 
 	<br><br>
+	<br><br>
+	<br><br>
+	<br><br>
+
+	<br><br>
+	<br><br>
+	<br><br>
+	<br><br>
+
+	<br><br>
+	<br><br>
+	<br><br>
+	<br><br>
 
 
 </body>
+
 </html>
