feat: article development -4

--- a/md.htm
+++ b/md.htm
@@ -12,6 +12,10 @@
     <div id="basicDOM"></div>
     <div id="detailDOM"></div>
 
+    <div style="width:70%; margin:0 auto;" id="mdcontainer">
+
+    </div>
+
 </body>
 
 
