--- a/md.htm
+++ b/md.htm
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="collapse.css">
     <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
