feat: page is editted..

--- a/index.html
+++ b/index.html
@@ -28,16 +28,27 @@
 			<div class="list-card">
 				<span class="exp">+ 5 years</span>
 				<div>
-					<h3>Object programming & frameworks</h3>
-					<span>.Net, Java</span>
+					<h3>Javascript</h3>
 				</div>
 			</div>
 
 			<div class="list-card">
 				<span class="exp">+ 4 years</span>
 				<div>
-					<h3>Mobile Application</h3>
-					<span>React Native, Javascript, Typescript, Android, Swift</span>
+					<h3>React Native</h3>
+				</div>
+			</div>
+			<div class="list-card">
+				<span class="exp">+ 1 years</span>
+				<div>
+					<h3>Android</h3>
+				</div>
+			</div>
+
+			<div class="list-card">
+				<span class="exp">+ 1 years</span>
+				<div>
+					<h3>Swift, Objective C</h3>
 				</div>
 			</div>
 
@@ -51,40 +62,49 @@
 
 		<div class="card">
 			<div class="skill-level">
-				<span>+</span>
-				<h2>60</h2>
+				<h3>Albaraka</h3>
+				<span>OK</span>
 			</div>
-
 			<div class="skill-meta">
 				<h3>Mobile Wallet Integration</h3>
-				<span>We add mobile wallet specify to our application.</span>
+				<span>React Native, Swift, Android</span>
 			</div>
 		</div>
 
 
 		<div class="card">
 			<div class="skill-level">
-				<h2>50</h2>
-				<span>%</span>
+				<h3>Albaraka</h3>
+				<span>OK</span>
 			</div>
-
 			<div class="skill-meta">
 				<h3>Become Remote Customer</h3>
-				<span>We add a property that become remote customer to our application.</span>
+				<span>React Native, Swift, Android</span>
 			</div>
 		</div>
 
 
 		<div class="card">
 			<div class="skill-level">
-				<h2>30</h2>
-				<span>%</span>
+				<h3>Albaraka</h3>
+				<span>OK</span>
 			</div>
-
 			<div class="skill-meta">
 				<h3>Banking Mobile App Rewrite</h3>
-				<span>We accomplish to rewrite our banking application.</span>
+				<span>React Native, Swift, Android</span>
 			</div>
+
+		</div>
+		<div class="card">
+			<div class="skill-level">
+				<h3>Fibabanka</h3>
+				<span>OK</span>
+			</div>
+			<div class="skill-meta">
+				<h3>Digital Market</h3>
+				<span>React Native</span>
+			</div>
+
 		</div>
 
 	</div>
