--- a/md.htm
+++ b/md.htm
@@ -1,15 +1,21 @@
 <html lang="en-us">
 
 <head>
+    
     <link rel="stylesheet" href="collapse.css">
     <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <a href="https://sadikcihanayaz.github.io"> BACK TO CV</a>
-    <p>Topics: </p>
+    <div class="container">
+		<div class="hero">
+			<h1 class="name"><strong>Sadık Cihan</strong> Ayaz</h1>
+			<span class="job-title"><a href="https://sadikcihanayaz.github.io"> Back To CV</a></span>
+		</div>
+	</div>
     <div id="basicDOM"></div>
     <div id="detailDOM"></div>
 
