web page interface was changed.

--- a/index.html
+++ b/index.html
@@ -1,164 +1,59 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Fractal by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
+	<head>
+		<title>Sadık Cihan Ayaz</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<head>
-	<title>Sadık Cihan Ayaz</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-
-<body>
-
-	<div class="container">
-		<div class="hero">
-			<h1 class="name"><strong>Sadık Cihan</strong> Ayaz</h1>
-			<span class="job-title"><a href="https://sadikcihanayaz.github.io/md.htm"> Read Articles</a></span>
-			<span class="email">scayaz.19.19@gmail.com</span>
-			<span class="name"><p><a href="https://www.linkedin.com/in/sadikcihanayaz/"> Linkedin</a></p></span>
-			<span class="name"><p><a href="https://github.com/SadikCihanAyaz">Github</a></p></span>
-		</div>
-	</div>
-
-	<!-- Skills and intrest section -->
-	<div class="container">
-
-		<div class="sections">
-			<h2 class="section-title">Skills</h2>
-
-			<div class="list-card">
-				<span class="exp">+ 5 years</span>
-				<div>
-					<h3>Javascript</h3>
+		<!-- Header -->
+			<header id="header">
+				<div class="content">
+					<h1><a href="#">Sadık Cihan AYAZ</a></h1>
+					<p>Welcome my personal home page. What are you looking?  
+					<ul class="actions">
+						<li><a href="https://sadikcihanayaz.github.io/md.htm" class="button primary icon solid fa-download">Read Articles</a></li>
+						<li><a href="https://www.linkedin.com/in/sadikcihanayaz/" class="button icon solid ">Contact With Me</a></li>
+						<li><a href="mailto:scayaz.19.19@gmail.com" class="button icon solid ">Send Me Email</a></li>
+					</ul>
 				</div>
-			</div>
+				<div class="image phone"><div class="inner"><img src="images/cihan.jpeg" alt="" /></div></div>
+			</header>
 
-			<div class="list-card">
-				<span class="exp">+ 4 years</span>
-				<div>
-					<h3>React Native</h3>
+
+		<!-- Two -->
+			<section id="two" class="wrapper">
+				<div class="inner alt">
+					<section class="spotlight">
+						<div class="content">
+							<h3>What is the meaning of the writing of the code?</h3>
+							<p>We are just focusing the writing the code right? What the code will do can be meaningful for us according to the business types. I don't intend this point. I am trying to understand why we are actually doing that activity. I just feel that we are doing the same thing for the same purpose as the man of living ancient ages who is drawing the image on the cave.</p>
+						</div>
+					</section>
 				</div>
-			</div>
-			<div class="list-card">
-				<span class="exp">+ 1 years</span>
-				<div>
-					<h3>Android</h3>
-				</div>
-			</div>
-
-			<div class="list-card">
-				<span class="exp">+ 1 years</span>
-				<div>
-					<h3>Swift, Objective C</h3>
-				</div>
-			</div>
-
-		</div>
-
-	</div>
-
-	<!-- Achievements -->
-
-	<div class="container cards">
-
-		<div class="card">
-			<div class="skill-meta">
-				<h3>Mobile Wallet Integration</h3>
-				<span>React Native, Swift, Android</span>
-			</div>
-		</div>
+			</section>
 
 
-		<div class="card">
-			<div class="skill-meta">
-				<h3>Become Remote Customer</h3>
-				<span>React Native, Swift, Android</span>
-			</div>
-		</div>
+		<!-- Footer -->
+			<footer id="footer">
+				
+			</footer>
 
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-		<div class="card">
-			<div class="skill-meta">
-				<h3>Banking Mobile App Rewrite</h3>
-				<span>React Native, Swift, Android</span>
-			</div>
-
-		</div>
-		<div class="card">
-			<div class="skill-meta">
-				<h3>Digital Market</h3>
-				<span>React Native</span>
-			</div>
-
-		</div>
-
-	</div>
-
-	<!-- Timeeline -->
-
-	<div class="container">
-		<ol class="timeline">
-			<li>
-				<p class="line">Current</p>
-				<span class="point"></span>
-				<p class="description">
-					Innovance
-				</p>
-				<span class="date">Feb. 2022 - Today</span>
-			</li>
-
-			<li>
-				<p class="line">Past Experience</p>
-				<span class="point"></span>
-				<p class="description">
-					Albarakatech (Sep. 2017 - Feb. 2022 )
-				</p>
-				<p class="description">
-					A Bank (Dec. 2013 - Sep. 2017)
-				</p>
-				<p class="description">
-					Turkgen (July 2013 - Dec. 2013)
-				</p>
-				<span class="date">Dec. 2013 - Feb. 2022</span>
-			</li>
-
-			<li>
-				<p class="line">Education</p>
-				<span class="point"></span>
-				<p class="description">
-					Istanbul University - Computer Engineering
-				</p>
-				<span class="date">2011 - 2016</span>
-			</li>
-			<li>
-				<p class="line">Education</p>
-				<span class="point"></span>
-				<p class="description">
-					Corum Anatolian High School
-				</p>
-				<span class="date">2006 - 2010</span>
-			</li>
-
-		</ol>
-
-	</div>
-
-
-	<br><br>
-	<br><br>
-	<br><br>
-	<br><br>
-
-	<br><br>
-	<br><br>
-	<br><br>
-	<br><br>
-
-	<br><br>
-	<br><br>
-	<br><br>
-	<br><br>
-
-
-</body>
-
+	</body>
 </html>
