--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h1><a href="#">Sadık Cihan AYAZ</a></h1>
 					<p>Welcome my personal home page. What are you looking?  
 					<ul class="actions">
-						<li><a href="https://sadikcihanayaz.github.io/md.htm" class="button primary icon solid fa-download">Read Articles</a></li>
+						<li><a href="/md2.htm" class="button primary icon solid fa-download">Read Articles</a></li>
 						<li><a href="https://www.linkedin.com/in/sadikcihanayaz/" class="button icon solid ">Contact With Me</a></li>
 						<li><a href="mailto:scayaz.19.19@gmail.com" class="button icon solid ">Send Me Email</a></li>
 					</ul>
