--- a/reactJS/index.htm
+++ b/reactJS/index.htm
@@ -79,7 +79,7 @@
 
         <section class="latest-podcast-section section-padding pb-0" id="section_2">
             <div class="container">
-                <div class="row justify-content-center">
+                <div class="row justify-content-center" id="dom">
 
                     <div class="col-lg-12 col-12">
                         <div class="section-title-wrap mb-5">
@@ -183,7 +183,7 @@
                         </div>
                     </div>
 
-                    <div id="dom"></div>
+                    <div id="dom2"></div>
 
 
 
@@ -222,7 +222,7 @@
     </footer>
 
     <script>
-        let domObj = '<div class="col-lg-6 col-12 mb-4 mb-lg-0" style="margin-top: 10px;"> <div class="custom-block d-flex"> <div class=""> <div class="custom-block-icon-wrap"> <div class="section-overlay"></div> <a href="detail-page.html" class="custom-block-image-wrap"> <img src="../images/reactJs.png" class="custom-block-image img-fluid" alt=""> <a href="#" class="custom-block-icon"> <i class="bi-eyeglasses"></i> </a> </a> </div> <div class="mt-2"> <a href="#" class="btn custom-btn"> Read </a> </div> </div> <div class="custom-block-info"> <div class="custom-block-top d-flex mb-1"> <small class="me-4"> <i class="bi-clock-fill custom-icon"></i> 10 Minutes </small> </div> <h5 class="mb-4"> <a href="detail-page.html"> Closures </a> </h5> <p class="mb-4">Advanced topic</p> </div> </div> </div>';
+        let domObj = `<div class="col-lg-6 col-12 mb-4 mb-lg-0" style="margin-top: 10px;"> <div class="custom-block d-flex"> <div class=""> <div class="custom-block-icon-wrap"> <div class="section-overlay"></div> <a href="detail-page.html" class="custom-block-image-wrap"> <img src="../images/reactJs.png" class="custom-block-image img-fluid" alt=""> <a href="#" class="custom-block-icon"> <i class="bi-eyeglasses"></i> </a> </a> </div> <div class="mt-2"> <a href="#" class="btn custom-btn"> Read </a> </div> </div> <div class="custom-block-info"> <div class="custom-block-top d-flex mb-1"> <small class="me-4"> <i class="bi-clock-fill custom-icon"></i> 10 Minutes </small> </div> <h5 class="mb-4"> <a href="detail-page.html"> Closures </a> </h5> <p class="mb-4">Advanced topic</p> </div> </div> </div>`;
         let topicsJson = {};
         function someCallback(data) {
             /** do something with data */
@@ -247,12 +247,28 @@
 
             reactJSTopic.forEach(createItem);
 
-            document.getElementById("dom").innerHTML = domObj;
+            //document.getElementById("dom").innerHTML = domObj;
         }
 
         function createItem(item, index) {
             console.log('createdItem');
             console.log(item)
+            const url = item.url;
+            const duration = item.duration;
+            const header= item.header;
+            const description = item.description;
+            let domObj = `<div class="custom-block d-flex"> <div class=""> <div class="custom-block-icon-wrap"> <div class="section-overlay"></div> <a href="${url}" class="custom-block-image-wrap"> <img src="../images/reactJs.png" class="custom-block-image img-fluid" alt=""> <a href="${url}" class="custom-block-icon"> <i class="bi-eyeglasses"></i> </a> </a> </div> <div class="mt-2"> <a href="${url}" class="btn custom-btn"> Read </a> </div> </div> <div class="custom-block-info"> <div class="custom-block-top d-flex mb-1"> <small class="me-4"> <i class="bi-clock-fill custom-icon"></i> ${duration} </small> </div> <h5 class="mb-4"> <a href="detail-page.html"> ${header} </a> </h5> <p class="mb-4">${description}</p> </div> </div> `;
+            //let domObj = `<div style="margin-top: 10px;"> <div class="custom-block d-flex"> <div class=""> <div class="custom-block-icon-wrap"> <div class="section-overlay"></div> <a href="${url}" class="custom-block-image-wrap"> <img src="../images/reactJs.png" class="custom-block-image img-fluid" alt=""> <a href="${url}" class="custom-block-icon"> <i class="bi-eyeglasses"></i> </a> </a> </div> <div class="mt-2"> <a href="${url}" class="btn custom-btn"> Read </a> </div> </div> <div class="custom-block-info"> <div class="custom-block-top d-flex mb-1"> <small class="me-4"> <i class="bi-clock-fill custom-icon"></i> ${duration} </small> </div> <h5 class="mb-4"> <a href="detail-page.html"> ${header} </a> </h5> <p class="mb-4">${description}</p> </div> </div> </div>`;
+
+            // Create an "li" node:
+            const node = document.createElement("div");
+            node.className = "col-lg-6 col-12 mb-4 mb-lg-0";
+            node.id = 'block'+ Math.floor(Math.random() * 100);
+            node.style.cssText = 'margin-top: 10px';
+
+            // Append the "li" node to the list:
+            document.getElementById("dom").appendChild(node);
+            document.getElementById(node.id).innerHTML = domObj;
         }
 
 
