--- a/md2.htm
+++ b/md2.htm
@@ -60,7 +60,7 @@
                             <a class="nav-link" href="reactJS/index.htm">ReactJS</a>
                         </li>
                         <div class="ms-4">
-                            <a href="/index.html" class="btn custom-btn custom-border-btn smoothscroll">Who is Sadık Cihan Ayaz?</a>
+                            <a href="/index.html" class="btn custom-btn custom-border-btn smoothscroll">Who am I?</a>
                         </div>
                 </div>
             </div>
