--- a/reactJS/index.htm
+++ b/reactJS/index.htm
@@ -98,27 +98,20 @@
 
 
     <footer class="site-footer">
-        <div class="container">
-            <div class="row">
+        <div class="container pt-5">
+            <div class="row align-items-center">
 
-                <div class="col-lg-6 col-12 mb-5 mb-lg-0">
-                    <div class="subscribe-form-wrap">
-                        <h6>USED THEME FOR THIS WEB</h6>
+                <div class="col-lg-2 col-md-3 col-12">
 
-                        <div class="custom-form subscribe-form">
-                            <div class="col-lg-12 col-12" style="text-align: center;">
-
-                                <a
-                                    href="https://themewagon.com/themes/podtalk-free-bootstrap-5-html5-website-template/">
-                                    <button type="submit" class="form-control" id="submit">THEMEWAGON</button>
-                                </a>
-
-                            </div>
-                        </div>
-
-                    </div>
                 </div>
 
+                <div class="col-lg-7 col-md-9 col-12">
+
+                </div>
+
+                <div class="col-lg-3 col-12">
+                    </p> Distribution Of This Template: <a rel="nofollow" href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                </div>
             </div>
         </div>
 
@@ -154,8 +147,6 @@
         }
 
         function createItem(item, index) {
-            console.log('createdItem');
-            console.log(item)
             const url = item.url;
             const duration = item.duration;
             const header = item.header;
@@ -164,7 +155,7 @@
 
             const node = document.createElement("div");
             node.className = "col-lg-6 col-12 mb-4 mb-lg-0";
-            node.id = 'block' + Math.floor(Math.random() * 100);
+            node.id = 'block' + Math.floor(Math.random() * 1000000);
             node.style.cssText = 'margin-top: 10px';
 
             document.getElementById("dom").appendChild(node);
@@ -172,7 +163,7 @@
             setTimeout(function () {
                 document.getElementById("loader").hidden = true;
                 document.getElementById(node.id).innerHTML = domObj;
-            }, 3000);
+            }, 0);
 
         }
 
