--- a/reactJS/index.htm
+++ b/reactJS/index.htm
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="col-lg-3 col-12">
-                    </p> Distribution Of This Template: <a rel="nofollow" href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                    </p style="font-size: 6px;"><a rel="nofollow" style="font-size: 9px; color: #f3f3f3" href="https://themewagon.com" target="_blank">Distribution Of This Template: ThemeWagon</a>
                 </div>
             </div>
         </div>
