--- a/md2.htm
+++ b/md2.htm
@@ -37,31 +37,9 @@
 
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-lg-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="md2.htm">Home</a>
-                        </li>
-
-
-                        <li class="nav-item">
-                          <a class="nav-link" href="javascript/index.htm">Javascript</a>
-                      </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="reactNative/index.htm">ReactNative</a>
-                      </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="reactJS/index.htm">ReactJS</a>
-                        </li>
-                        <div class="ms-4">
-                            <a href="/index.html" class="btn custom-btn custom-border-btn smoothscroll">Who am I?</a>
-                        </div>
+                <div class="ms-4"></div>
+                <div class="ms-4">
+                    <a href="/index.html" class="btn custom-btn custom-border-btn smoothscroll">Who am I?</a>
                 </div>
             </div>
         </nav>
@@ -88,76 +66,76 @@
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
-                            <a href="detail-page.html" class="custom-block-image-wrap">
-                                <img src="images/topics/physician-consulting-his-patient-clinic.jpg"
+                            <a href="reactNative/index.htm" class="custom-block-image-wrap">
+                                <img src="images/arrowRight.jpg"
                                     class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
                                 <h5 class="mb-1">
-                                    <a href="listing-page.html">
-                                        Productivity
+                                    <a href="reactNative/index.htm">
+                                        React Native
                                     </a>
                                 </h5>
 
-                                <p class="badge mb-0">50 Episodes</p>
+                                <p class="badge mb-0">0 Articles</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
-                            <a href="detail-page.html" class="custom-block-image-wrap">
-                                <img src="images/topics/repairman-doing-air-conditioner-service.jpg"
+                            <a href="reactJS/index.htm" class="custom-block-image-wrap">
+                                <img src="images/arrowUp.jpg"
                                     class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
                                 <h5 class="mb-1">
-                                    <a href="listing-page.html">
-                                        Technician
+                                    <a href="reactJS/index.htm">
+                                        React JS
                                     </a>
                                 </h5>
 
-                                <p class="badge mb-0">12 Episodes</p>
+                                <p class="badge mb-0">3 Articles</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
-                            <a href="detail-page.html" class="custom-block-image-wrap">
-                                <img src="images/topics/woman-practicing-yoga-mat-home.jpg"
+                            <a href="javascript/index.htm" class="custom-block-image-wrap">
+                                <img src="images/arrowLeft.jpg"
                                     class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
                                 <h5 class="mb-1">
-                                    <a href="listing-page.html">
-                                        Mindfullness
+                                    <a href="javascript/index.htm">
+                                        Javascript
                                     </a>
                                 </h5>
 
-                                <p class="badge mb-0">35 Episodes</p>
+                                <p class="badge mb-0">0 Articles</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
-                            <a href="detail-page.html" class="custom-block-image-wrap">
-                                <img src="images/topics/delicious-meal-with-sambal-arrangement.jpg"
+                            <a href="nextJS/index.htm" class="custom-block-image-wrap">
+                                <img src="images/arrowBottom.jpg"
                                     class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
                                 <h5 class="mb-1">
-                                    <a href="listing-page.html">
-                                        Cooking
+                                    <a href="nextJS/index.htm">
+                                        Next JS
                                     </a>
                                 </h5>
 
-                                <p class="badge mb-0">12 Episodes</p>
+                                <p class="badge mb-0">0 Articles</p>
                             </div>
                         </div>
                     </div>
@@ -169,11 +147,20 @@
 
 
     <footer class="site-footer">
-        <div class="container">
-            <div class="row">
+        <div class="container pt-5">
+            <div class="row align-items-center">
 
-                
+                <div class="col-lg-2 col-md-3 col-12">
 
+                </div>
+
+                <div class="col-lg-7 col-md-9 col-12">
+
+                </div>
+
+                <div class="col-lg-3 col-12">
+                    </p style="font-size: 6px;"><a rel="nofollow" style="font-size: 9px; color: #f3f3f3" href="https://themewagon.com" target="_blank">Distribution Of This Template: ThemeWagon</a>
+                </div>
             </div>
         </div>
 
