--- a/md2.htm
+++ b/md2.htm
@@ -85,14 +85,14 @@
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
-                            <a href="reactJS/index.htm" class="custom-block-image-wrap">
+                            <a href="tutorial.htm?topic=reactJs" class="custom-block-image-wrap">
                                 <img src="images/arrowUp.jpg"
                                     class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
                                 <h5 class="mb-1">
-                                    <a href="reactJS/index.htm">
+                                    <a href="tutorial.htm?topic=reactJs">
                                         React JS
                                     </a>
                                 </h5>
