--- a/tutorial.htm
+++ b/tutorial.htm
@@ -46,18 +46,18 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="../md2.htm">Home</a>
+                            <a class="nav-link active" href="md2.htm">Home</a>
                         </li>
 
 
                         <li class="nav-item">
-                            <a class="nav-link" href="../javascript/index.htm">Javascript</a>
+                            <a class="nav-link" href="tutorial.htm?topic=javascript">Javascript</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../reactNative/index.htm">ReactNative</a>
+                            <a class="nav-link" href="tutorial.htm?topic=reactNative">ReactNative</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../reactJS/index.htm">ReactJS</a>
+                            <a class="nav-link" href="tutorial.htm?topic=reactJs">ReactJS</a>
                         </li>
                         <div class="ms-4">
                             <a href="/index.html" class="btn custom-btn custom-border-btn smoothscroll">Who am I?</a>
