--- a/md2.htm
+++ b/md2.htm
@@ -66,14 +66,14 @@
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
-                            <a href="reactNative/index.htm" class="custom-block-image-wrap">
+                            <a href="tutorial.htm?topic=reactNative" class="custom-block-image-wrap">
                                 <img src="images/arrowRight.jpg"
                                     class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
                                 <h5 class="mb-1">
-                                    <a href="reactNative/index.htm">
+                                    <a href="tutorial.htm?topic=reactNative">
                                         React Native
                                     </a>
                                 </h5>
@@ -104,14 +104,14 @@
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
-                            <a href="javascript/index.htm" class="custom-block-image-wrap">
+                            <a href="tutorial.htm?topic=javascript" class="custom-block-image-wrap">
                                 <img src="images/arrowLeft.jpg"
                                     class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
                                 <h5 class="mb-1">
-                                    <a href="javascript/index.htm">
+                                    <a href="tutorial.htm?topic=javascript">
                                         Javascript
                                     </a>
                                 </h5>
@@ -123,14 +123,14 @@
 
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block custom-block-overlay">
-                            <a href="nextJS/index.htm" class="custom-block-image-wrap">
+                            <a href="tutorial.htm?topic=nextJs" class="custom-block-image-wrap">
                                 <img src="images/arrowBottom.jpg"
                                     class="custom-block-image img-fluid" alt="">
                             </a>
 
                             <div class="custom-block-info custom-block-overlay-info">
                                 <h5 class="mb-1">
-                                    <a href="nextJS/index.htm">
+                                    <a href="tutorial.htm?topic=nextJs">
                                         Next JS
                                     </a>
                                 </h5>
