--- a/tutorial.htm
+++ b/tutorial.htm
@@ -59,6 +59,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="tutorial.htm?topic=reactJs">ReactJS</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tutorial.htm?topic=nextJs">NextJS</a>
+                        </li>
                         <div class="ms-4">
                             <a href="/index.html" class="btn custom-btn custom-border-btn smoothscroll">Who am I?</a>
                         </div>
@@ -88,6 +91,13 @@
 
                     <div id="dom2">
                         <div id="loader" class="loader" style="margin: 0 auto;"></div>
+                        <div id="noArticle" hidden="true" class="text-center mb-5 pb-2">
+                            <h1 class="text-black">No Articles</h1>
+
+                            <p class="text-black">We did not find any articles for listing</p>
+
+                            <a href="/md2.htm" class="btn custom-btn smoothscroll mt-3">Return Home</a>
+                        </div>
                     </div>
 
                 </div>
@@ -138,7 +148,14 @@
         const genereteDynamicCourse = (data) => {
             const topic = getQueryStringParams('topic');
             allTopics = data[topic];
-            allTopics.forEach(createItem);
+            if (allTopics.length === 0) {
+                document.getElementById("loader").hidden = true;
+                document.getElementById("noArticle").hidden = false;
+            }
+            else {
+                allTopics.forEach(createItem);
+            }
+
         }
 
         function createItem(item, index) {
